--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,6 +7,11 @@ pipeline {
                 echo 'Planning'
             }
         }
+        stage('Simpli') {
+            steps {
+                echo 'Simplilearn'
+            }
+        }
         stage('Build') {
             steps {
                 echo 'Building'
